language/move-lang/tests/move_check/typing/assign_pop_resource.exp
error: 

   ┌── tests/move_check/typing/assign_pop_resource.move:2:5 ───
   │
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   ·
 5 │         _ = R{};
   │         ^ Cannot ignore resource values. The value must be used
   │             --- The type: '0x8675309::M::R'
   │

error: 

   ┌── tests/move_check/typing/assign_pop_resource.move:2:5 ───
   │
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   ·
 6 │         (_, _) = (R{}, R{});
   │          ^ Cannot ignore resource values. The value must be used
   │                   --- The type: '0x8675309::M::R'
   │

error: 

   ┌── tests/move_check/typing/assign_pop_resource.move:2:5 ───
   │
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   ·
 6 │         (_, _) = (R{}, R{});
   │             ^ Cannot ignore resource values. The value must be used
   │                        --- The type: '0x8675309::M::R'
   │

